# cpp-basics

./: CMakeLists.txt  README.md  hello_world.cpp  todo_move_me_out.cpp
homework_guess/: CMakeLists.txt  check_value.cpp  random_value.cpp  random_value.h
homework_hello_world/: .gitignore  README.md
